# Jarvis

./: README.md  compose.yml
01_jarvis/: Dockerfile  README.md  groq_service.py  main.py  pyproject.toml  speech_to_text.py  text_to_speech.py
01_jarvis/static/js/: script.js
01_jarvis/templates/: index.html
